# TradingApp

./: .gitignore  CMakeLists.txt  prompt
client/: CMakeLists.txt
client/include/: ApiClient.h  MainWindow.h  MarketWidget.h  OrderBookWidget.h  OrderEntryWidget.h  PnLWidget.h  PositionsWidget.h  StrategyWidget.h  TradeLogWidget.h
client/src/: ApiClient.cpp  MainWindow.cpp  MarketWidget.cpp  OrderBookWidget.cpp  OrderEntryWidget.cpp  PnLWidget.cpp  PositionsWidget.cpp  StrategyWidget.cpp  TradeLogWidget.cpp  main.cpp
include/core/: Instrument.h  Order.h  OrderBook.h  Types.h
include/data/: HistoricalDataLoader.h  MarketDataFeed.h  TickDataParser.h
include/engine/: EventLoop.h  MatchingEngine.h  SignalDispatcher.h
include/exchange/: BinanceAdapter.h  ExchangeGateway.h  SimulatedExchange.h
include/network/: ConnectionPool.h  RestClient.h  WebSocketClient.h
include/portfolio/: BalanceTracker.h  PortfolioManager.h  Position.h
include/risk/: PnLTracker.h  PositionLimits.h  RiskManager.h
include/strategy/: ArbitrageStrategy.h  MeanReversion.h  MomentumStrategy.h  StrategyBase.h
include/ui/: ConsoleUI.h  Dashboard.h  TradingUI.h  UIEvent.h
include/utils/: Config.h  EventQueue.h  Logger.h  ThreadPool.h  Timer.h
server/: CMakeLists.txt
server/include/: TradingService.h
server/src/: TradingService.cpp  main.cpp
src/: main.cpp
src/core/: OrderBook.cpp
src/data/: CMakeLists.txt
src/engine/: SignalDispatcher.cpp
src/exchange/: CMakeLists.txt
src/network/: CMakeLists.txt
src/portfolio/: CMakeLists.txt  PortfolioManager.cpp
src/risk/: CMakeLists.txt  PositionLimits.cpp
src/strategy/: CMakeLists.txt  MeanReversion.cpp
src/utils/: CMakeLists.txt
tests/: CMakeLists.txt
tests/integration/: test_exchange_sim.cpp
tests/unit/: test_strategy.cpp
